Fix z-index bug with codemirror and modals

--- a/demo/assets/styles/codemirror.css
+++ b/demo/assets/styles/codemirror.css
@@ -6,6 +6,7 @@
   font-family: monospace;
   height: 400px;
   color: black;
+  z-index: 0;
 }
 
 /* PADDING */
